[project]
name = "paylink-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "pymongo[srv]>=4.13.0",
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "types-python-json-logger>=2.0.7.20240106",
    "types-pymongo>=4.7.0.20240422",
    "types-python-dotenv>=0.21.0.20240310",
    "types-nest-asyncio>=1.6.0.20240311",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "mcp",
    "mcp.client.stdio",
    "mcp.server.fastmcp",
    "mcp.client.sse" # Adding this as it was also in the mypy errors
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "tests.py test_*.py *_test.py"
testpaths = "tests"
